Bug 122904 - Small icons in cell formatting dialog due to DPI handling change
Summary: Small icons in cell formatting dialog due to DPI handling change
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-01-23 16:55 UTC by Buovjaga
Modified: 2019-01-28 16:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (44.31 KB, image/png)
2019-01-23 17:34 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2019-01-23 16:55:26 UTC
1. Open Calc
2. Ctrl-1 (Format cells)
3. Borders tab

Observe the Presets and Shadow style sections.

Bibisected with win32-6.3 to https://gerrit.libreoffice.org/plugins/gitiles/core/+/41b8b8c5ede634774851b438a4c823962c14b611%5E!/

use Image(OUString) instead of Image(Bitmap(OUString))

which benefits LOOL since we can delay creating the image until
we know the dpi setting of the display we are going to write to.

Adding Cc: to Noel Grandin

Same effect observed on Linux as well.
Comment 1 Xisco Faulí 2019-01-23 17:34:38 UTC
Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 0d46fb02f3f19d11db40b6c5335d78a3894502d7
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-01-23 17:34:56 UTC
Created attachment 148568 [details]
screenshot
Comment 3 Commit Notification 2019-01-24 16:51:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1500ec88195466d119d73bdf7b85e8f5526e81fc%5E%21

tdf#122904: missing images in the format->paragraph->border valuesets

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-01-28 16:09:24 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: ef28740d0ae036f6fa2e9866cadf335e9f0ad8b9
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this!!