tdf#122904 Small icons in cell formatting dialog due to DPI handling change

Revert "use Image(OUString) instead of Image(Bitmap(OUString))"

This reverts commit 41b8b8c5ede634774851b438a4c823962c14b611.

Change-Id: Ibce2cd1edeb63984958423b9d7a449d63e222a61