sd/source/ui/dlg/inspagob.cxx
@@ -82,7 +82,9 @@ void SdInsertPagesObjsDlg::Reset()
     }
     else
     {
-        Image aImgText(BMP_DOC_TEXT);
+        BitmapEx aBmpText(BMP_DOC_TEXT);
+        //to-do, check if this is already transparent and remove intermedia bitmapex if it is
+        Image aImgText(BitmapEx(aBmpText.GetBitmap(), COL_WHITE));
         m_pLbTree->InsertEntry( rName, aImgText, aImgText );
     }
 
